added HMC5883L_Test.ino to project

--- a/ebs2WDMiniQ/ebs2WDMiniQ/ebs2WDMiniQ.vcxproj.filters
+++ b/ebs2WDMiniQ/ebs2WDMiniQ/ebs2WDMiniQ.vcxproj.filters
@@ -13,9 +13,15 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Source Files\Testing">
+      <UniqueIdentifier>{d81d42b9-d595-4ac3-83ad-1366bfdacaed}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <None Include="ebs2WDMiniQ.ino" />
+    <None Include="HMC5883L_Test.ino">
+      <Filter>Source Files\Testing</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="__vm\.ebs2WDMiniQ.vsarduino.h">
