--- a/ebs2WDMiniQ/ebs2WDMiniQTesting/ebs2WDMiniQTesting.vcxproj.filters
+++ b/ebs2WDMiniQ/ebs2WDMiniQTesting/ebs2WDMiniQTesting.vcxproj.filters
@@ -13,15 +13,12 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
-    <Filter Include="Source Files\Testing">
-      <UniqueIdentifier>{d81d42b9-d595-4ac3-83ad-1366bfdacaed}</UniqueIdentifier>
-    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <None Include="ebs2WDMiniQ.ino" />
+    <None Include="ebs2WDMiniQTesting.ino" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="__vm\.ebs2WDMiniQ.vsarduino.h">
+    <ClInclude Include="__vm\.ebs2WDMiniQTesting.vsarduino.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
