--- a/ebs2WDMiniQ/ebs2WDMiniQTesting/ebs2WDMiniQTesting.vcxproj.filters
+++ b/ebs2WDMiniQ/ebs2WDMiniQTesting/ebs2WDMiniQTesting.vcxproj.filters
@@ -21,5 +21,13 @@
     <ClInclude Include="__vm\.ebs2WDMiniQTesting.vsarduino.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="test.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="test.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
