--- a/ebs2WDMiniQ/Testing/Testing.vcxproj.filters
+++ b/ebs2WDMiniQ/Testing/Testing.vcxproj.filters
@@ -15,19 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <None Include="ebs2WDMiniQTesting.ino" />
+    <None Include="Testing.ino" />
   </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="__vm\.ebs2WDMiniQTesting.vsarduino.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="functions.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="functions.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-  </ItemGroup>
+ 
 </Project>
