--- a/ebs2WDMiniQ/ebs2WDMiniQ/ebs2WDMiniQ.vcxproj
+++ b/ebs2WDMiniQ/ebs2WDMiniQ/ebs2WDMiniQ.vcxproj
@@ -95,4 +95,9 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties arduino.upload.port="COM6" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
