--- a/ebs2WDMiniQ/ebs2WDMiniQ/ebs2WDMiniQ.vcxproj
+++ b/ebs2WDMiniQ/ebs2WDMiniQ/ebs2WDMiniQ.vcxproj
@@ -81,6 +81,7 @@
     <DebuggerFlavor>VisualMicroDebugger</DebuggerFlavor>
   </PropertyGroup>
   <ItemGroup>
+    <None Include="ClassDiagram1.cd" />
     <None Include="ebs2WDMiniQ.ino">
       <FileType>CppCode</FileType>
     </None>
