--- a/ebs2WDMiniQ/ebs2WDMiniQ/ebs2WDMiniQ.vcxproj.filters
+++ b/ebs2WDMiniQ/ebs2WDMiniQ/ebs2WDMiniQ.vcxproj.filters
@@ -19,6 +19,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="ebs2WDMiniQ.ino" />
+    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="__vm\.ebs2WDMiniQ.vsarduino.h">
