--- a/ebs2WDMiniQ/ebs2WDMiniQTesting/ebs2WDMiniQTesting.vcxproj.filters
+++ b/ebs2WDMiniQ/ebs2WDMiniQTesting/ebs2WDMiniQTesting.vcxproj.filters
@@ -21,12 +21,12 @@
     <ClInclude Include="__vm\.ebs2WDMiniQTesting.vsarduino.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="test.h">
+    <ClInclude Include="functions_test.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="test.cpp">
+    <ClCompile Include="functions_test.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
